Add functionality for sharing donor info with charities

--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,5 @@ venv/
 # Rope
 .ropeproject/
 
-# Uploaded files
-/media/uploads
-
-# Receipts
-/media/receipts
+# Uploaded/downloaded files; receipts
+/media
