--- a/react/package.json
+++ b/react/package.json
@@ -6,6 +6,7 @@
     "card-validator": "^5.0.0",
     "classnames": "^2.2.5",
     "e": "0.0.4",
+    "json-loader": "^0.5.7",
     "moment": "^2.22.1",
     "moment-duration-format": "^2.2.2",
     "prop-types": "^15.6.1",
