--- a/react/package.json
+++ b/react/package.json
@@ -13,6 +13,7 @@
     "react": "^16.2.0",
     "react-datepicker": "^1.4.1",
     "react-dom": "^16.2.0",
+    "react-ga": "^2.5.7",
     "react-radio-group": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
