--- a/react_new/package.json
+++ b/react_new/package.json
@@ -6,10 +6,25 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "card-validator": "^9.1.0",
+    "classnames": "^2.5.1",
+    "e": "^0.2.33",
+    "json-loader": "^0.5.7",
+    "moment": "^2.30.1",
+    "moment-duration-format": "^2.3.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-datepicker": "^6.9.0",
+    "react-dom": "^18.3.1",
+    "react-ga": "^3.3.1",
+    "react-radio-group": "^3.0.3",
+    "react-redux": "^9.1.2",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
+    "reactstrap": "^9.2.2",
+    "redux": "^5.0.1",
     "redux-form": "^8.3.10",
+    "underscore": "^1.13.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
