Lock package.json versions at exact version numbers

--- a/react/package.json
+++ b/react/package.json
@@ -3,25 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "card-validator": "^5.0.0",
-    "classnames": "^2.2.5",
+    "card-validator": "5.0.0",
+    "classnames": "2.2.5",
     "e": "0.0.4",
-    "json-loader": "^0.5.7",
-    "moment": "^2.22.1",
-    "moment-duration-format": "^2.2.2",
-    "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-datepicker": "^1.4.1",
-    "react-dom": "^16.2.0",
-    "react-ga": "^2.5.7",
-    "react-radio-group": "^3.0.2",
-    "react-redux": "^5.0.7",
+    "json-loader": "0.5.7",
+    "moment": "2.22.1",
+    "moment-duration-format": "2.2.2",
+    "prop-types": "15.6.1",
+    "react": "16.2.0",
+    "react-datepicker": "1.4.1",
+    "react-dom": "16.2.0",
+    "react-ga": "2.5.7",
+    "react-radio-group": "3.0.2",
+    "react-redux": "5.0.7",
     "react-scripts": "1.1.1",
-    "react-select": "^1.2.1",
-    "reactstrap": "^5.0.0",
-    "redux": "^4.0.0",
-    "redux-form": "^7.3.0",
-    "underscore": "^1.8.3"
+    "react-select": "1.2.1",
+    "reactstrap": "5.0.0",
+    "redux": "4.0.0",
+    "redux-form": "7.3.0",
+    "underscore": "1.8.3"
   },
   "scripts": {
     "build": "webpack --config config/webpack.config.js",
@@ -30,25 +30,25 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^3.14.0",
-    "eslint-config-google": "^0.9.1",
-    "eslint-config-react-app": "^0.5.0",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-flowtype": "^2.30.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.9.0",
-    "iterators-polyfill": "^1.0.2",
-    "jest": "^22.4.3",
-    "react-test-renderer": "^16.3.2",
-    "webpack": "^1.15.0",
-    "webpack-bundle-tracker": "^0.2.1",
-    "webpack-cleanup-plugin": "^0.4.2",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-manifest-plugin": "^1.1.0"
+    "babel-jest": "22.4.3",
+    "babel-loader": "7.1.1",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "eslint": "3.14.0",
+    "eslint-config-google": "0.9.1",
+    "eslint-config-react-app": "0.5.0",
+    "eslint-loader": "1.6.1",
+    "eslint-plugin-flowtype": "2.30.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.9.0",
+    "iterators-polyfill": "1.0.2",
+    "jest": "22.4.3",
+    "react-test-renderer": "16.3.2",
+    "webpack": "1.15.0",
+    "webpack-bundle-tracker": "0.2.1",
+    "webpack-cleanup-plugin": "0.4.2",
+    "webpack-dev-server": "1.16.2",
+    "webpack-manifest-plugin": "1.1.0"
   }
 }
