--- a/Dockerfile.ubuntu24.04
+++ b/Dockerfile.ubuntu24.04
@@ -1,9 +1,36 @@
 # For local development and testing only.
 
-FROM ubuntu:16.04
+FROM ubuntu:24.04
 
-# Install sudo
-RUN apt-get update && apt-get install -y sudo
+# Avoid prompts from apt
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Set environment variables
+ENV PYENV_ROOT=/root/.pyenv
+ENV PATH=$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH
+
+# Update and install dependencies
+RUN apt-get update && apt-get upgrade -y \
+    && apt-get install -y \
+        # Essential build tools
+        build-essential \
+        # Libraries for building Python
+        libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev \
+        # Additional libraries that some Python packages might need
+        libncursesw5-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev \
+        # Useful tools
+        wget curl git vim sudo \
+        # App specific dependencies
+        wkhtmltopdf \
+        xauth \
+        xvfb \
+        # PostgreSQL
+        postgresql \
+        libpq-dev \
+        # Redis
+        redis-server \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # Create a new user "devuser" with user ID 1000
 RUN useradd -m -s /bin/bash -u 1000 devuser
@@ -17,23 +44,17 @@ RUN echo "devuser ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 # Switch to the new user
 USER devuser
 
-# Install OS level dependencies
-RUN sudo apt-get update && sudo apt-get install -y \
-  python \
-  python-pip \
-  build-essential \
-  libssl-dev \
-  libffi-dev \
-  python-dev \
-  wkhtmltopdf \
-  xauth \
-  xvfb \
-  postgresql \
-  libpq-dev \
-  redis-server \
-  git \
-  curl \
-  vim
+# Install pyenv
+RUN curl https://pyenv.run | bash
+
+# Add pyenv initialization to bash profile
+RUN echo 'eval "$(pyenv init -)"' >> ~/.bashrc
+
+# Install Python versions
+RUN pyenv install 2.7.18
+
+# Set global Python version
+RUN pyenv global 2.7.18
 
 # Start PostgreSQL, set a password and create eaa database
 USER postgres
@@ -47,17 +68,14 @@ USER devuser
 RUN pip install --upgrade "pip<21.0" && \
   pip install virtualenv==16.7.10
 
-# Set the working directory
-# WORKDIR /usr/src/app
-
-# Copy over all the files from this repo
-# COPY . .
-
 # Install nvm and node
-ENV NVM_DIR=/home/devuser/.nvm
+ENV NVM_DIR=/root/.nvm
 RUN mkdir $NVM_DIR && \
   curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash && \
   . $NVM_DIR/nvm.sh && nvm install 8.14.0
+
+# Copy over python dependencies
+# COPY deps deps
 
 # Create and activate a Python virtual environment and install the dependencies
 # RUN virtualenv donation_portal_env && \
