Add example.env and fix package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": ">=22.9.01"
   },
-  "main": "build.mjs",
+  "main": "build.js",
   "scripts": {
     "build": "node build.js",
     "dev": "node --env-file=.env --watch-path=./src build.js",
