--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,11 @@ venv/
 
 # Salt
 deploy/pillar/eaa.sls*
+
+donation_portal_env
+
+node_modules/
+frontend/test-results/
+frontend/playwright-report/
+frontend/blob-report/
+frontend/playwright/.cache/
