--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
   },
   "main": "build.js",
   "scripts": {
-    "build": "node build.js",
-    "dev": "node --env-file=.env --watch-path=./src build.js",
+    "build": "node --env-file=prod.env build.js",
+    "dev": "node --env-file=dev.env --watch-path=./src build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nathan Sherburn",
