Add linting to settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.pythonPath": "/workspaces/donation_portal-2/donation_portal_env/bin/python2.7"
+  "python.pythonPath": "/workspaces/donation_portal-2/donation_portal_env/bin/python2.7",
+  "python.linting.enabled": true
 }
