--- a/Dockerfile.ubuntu24.04
+++ b/Dockerfile.ubuntu24.04
@@ -31,6 +31,9 @@ RUN apt-get update && apt-get upgrade -y \
         redis-server \
         # Sudo
         sudo \
+        # Memcached
+        memcached \
+        libmemcached-tools \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
