--- a/deps/requirements-dev.txt
+++ b/deps/requirements-dev.txt
@@ -5,26 +5,21 @@ arrow==0.10.0
 atomicwrites==1.2.1
 attrs==18.2.0
 billiard==3.3.0.23
-celery==3.1.25
+celery>=5.3.1
 certifi==2017.1.23
 cffi==1.9.1
 configparser==3.5.0
 contextlib2==0.5.4
 cryptography==2.8
-Django==1.8.19
-django-bootstrap3==8.1.0
-django-cors-headers==2.4.0
-django-enumfields==0.8.2
+Django>=4.2,<5.0
+django-bootstrap3>=23.3
+django-cors-headers>=4.2.0
+django-enumfields>=2.1.1
 django-ipware==1.1.6
-django-paypal==0.3.6
+django-paypal>=2.0
 django-pinpayments==1.0.11
-django-reversion==2.0.8
-django-webpack-loader==0.6.0
+django-reversion>=5.0.4
 enum34==1.1.6
-flake8==3.3.0
-flake8-blind-except==0.1.1
-flake8-putty==0.4.0
-flake8-tidy-imports==1.0.5
 funcsigs==1.0.2
 gunicorn==19.6.0
 idna==2.2
@@ -44,26 +39,25 @@ pbr==4.2.0
 pdfkit==0.6.1
 Pillow==4.0.0
 pluggy==0.8.0
-psycopg2==2.7.4
+psycopg2-binary>=2.9.7
 py==1.7.0
 pyasn1==0.2.2
 pycodestyle==2.3.1
 pycparser==2.17
 pycrypto==2.6.1
-pyflakes==1.5.0
 PyJWT==1.4.0
 pyOpenSSL==16.2.0
 pyparsing==2.1.10
-PyPDF2==1.26.0
+PyPDF2>=3.0.0
 pytest==4.0.1
 python-dateutil==2.6.0
 memcached>=1.51
 python-postmark==0.4.12
 pytz==2016.10
-pyxero==0.9.3
+xero-python>=1.0.0
 q==2.6
-raven==5.32.0
-redis==2.10.5
+raven>=6.10.0
+redis>=4.6.0
 requests==2.13.0
 requests-oauthlib==0.8.0
 rratelimit==0.0.4
@@ -73,7 +67,7 @@ scandir==1.9.0
 selenium==3.14.1
 six==1.10.0
 subprocess32==3.2.7
-stripe==2.55.0
+stripe>=5.4.0
 termcolor==1.1.0
 typing==3.5.3.0
 urllib3==1.23
