--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,12 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-	"name": "ubuntu24.04",
+	"name": "Dev Container",
 	"build": {
 		// Sets the run context to one level up instead of the .devcontainer folder.
 		"context": "../..",
 		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
-		"dockerfile": "../../Dockerfile.ubuntu24.04"
+		"dockerfile": "../Dockerfile.dev"
 	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
