--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -43,7 +43,7 @@ RUN useradd -ms /bin/bash devuser
 RUN usermod -aG sudo devuser
 
 # Set up password-less sudo for the user
-RUN echo "devuser ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+RUN echo "devuser ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/devuser
 
 # Switch to the new user
 USER devuser
