--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ dependencies = [
     "pillow==11.1.0",
     "pluggy==1.5.0",
     "prompt_toolkit==3.0.50",
-    "psycopg2==2.9.10",
+    "psycopg2-binary==2.9.10",
     "pycparser==2.22",
     "PyJWT==2.10.1",
     "pymemcache==4.0.0",
