--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "donation-portal"
-version = "0.1.0"
-description = "Add your description here"
+version = "2.0.0"
+description = "Effective Altruism Australia's donation portal"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -35,7 +35,7 @@ dependencies = [
     "kombu==5.5.2",
     "mailchimp3==3.0.21",
     "mock==5.2.0",
-    "model-mommy==2.0.0",
+    "factory-boy==3.2.1",
     "oauthlib==3.2.2",
     "outcome==1.3.0.post0",
     "packaging==24.2",
@@ -80,4 +80,5 @@ dependencies = [
     "websocket-client==1.8.0",
     "wsproto==1.2.0",
     "XlsxWriter==3.2.2",
+    "watchdog>=6.0.0",
 ]
