Ignore files in frontend/dist

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ frontend/test-results/
 frontend/playwright-report/
 frontend/blob-report/
 frontend/playwright/.cache/
+frontend/dist/
 
 # Environment files
 .env
