--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ dependencies = [
     "click-repl==0.3.0",
     "cryptography==44.0.2",
     "Django==5.1.8",
-    "django-bootstrap3==25.1",
     "django-cors-headers==4.7.0",
     "django-enumfields==2.1.1",
     "django-ipware==7.0.1",
@@ -81,4 +80,5 @@ dependencies = [
     "wsproto==1.2.0",
     "XlsxWriter==3.2.2",
     "watchdog>=6.0.0",
+    "django-debug-toolbar>=5.2.0",
 ]
