Add pyproject.toml testing config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,4 +81,16 @@ dependencies = [
     "XlsxWriter==3.2.2",
     "watchdog>=6.0.0",
     "django-debug-toolbar>=5.2.0",
+    "pytest-playwright>=0.7.0",
+    "playwright>=1.52.0",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["frontend/tests_python"]
+python_files = "test_*.py"
+python_functions = "test_*"
+addopts = "--tb=short -v"
+asyncio_mode = "auto"
+markers = [
+    "playwright: mark test as playwright test"
 ]
