--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,6 @@ dependencies = [
     "oauthlib==3.2.2",
     "outcome==1.3.0.post0",
     "packaging==24.2",
-    "pdfkit==1.0.0",
     "pillow==11.1.0",
     "pluggy==1.5.0",
     "prompt_toolkit==3.0.50",
@@ -46,7 +45,6 @@ dependencies = [
     "pycparser==2.22",
     "PyJWT==2.10.1",
     "pymemcache==4.0.0",
-    "PyPDF2==3.0.1",
     "PySocks==1.7.1",
     "pytest==8.3.5",
     "python-dateutil==2.9.0.post0",
@@ -83,6 +81,7 @@ dependencies = [
     "django-debug-toolbar>=5.2.0",
     "pytest-playwright>=0.7.0",
     "playwright>=1.52.0",
+    "weasyprint>=65.1",
 ]
 
 [tool.pytest.ini_options]
