--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ dependencies = [
     "pytest-playwright>=0.7.0",
     "playwright>=1.52.0",
     "weasyprint>=65.1",
+    "sentry-sdk[django]>=2.34.0",
 ]
 
 [tool.pytest.ini_options]
